# folgern

./: .gitignore  CMakeLists.txt  README.md  allocator.h  main.cpp  tensor.cpp  tensor.h
src/: allocator.h  op.cpp  op.h  tensor.cpp  tensor.h
